テスト２回目

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
-	
-	
+
+
 	<link rel="stylesheet" href="jentoluNet/css/css.css"/>
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 		<link rel="shortcut icon" href="./jentoluNet/img/icon.jpg">
 </head>
 <body>
-	
+	//変更します。
 	<div>
 		<header>
 			<h1 align="left"><a href="index.html"><font color="white" size="6">じぇんとるウィッグ</font></a></h1>
