--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	//変更します。２回目
 	<div>
 		<header>
-			<h1 align="left"><a href="index.html"><font color="white" size="6">じぇんとるウィッグ！！！</font></a></h1>
+			<h1 align="left"><a href="index.html"><font color="white" size="6">じぇんとるウィッグ</font></a></h1>
 			
 		<div class="menu" align="center">
 			<table>
