コメントを入れ忘れていました。 ごめんなさい

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="shortcut icon" href="./jentoluNet/img/icon.jpg">
 </head>
 <body>
-	//変更します。２回目
+	<!-- 変更します。２回目 -->
 	<div>
 		<header>
 			<h1 align="left"><a href="index.html"><font color="white" size="6">じぇんとるウィッグ</font></a></h1>
