前ページにタイトルを付けました。

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 	<link rel="stylesheet" href="jentoluNet/css/css.css"/>
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 		<link rel="shortcut icon" href="./jentoluNet/img/icon.jpg">
+
+	<title>
+		じぇんとるウィッグ
+	</title>
 </head>
 <body>
-	<!-- 変更します。２回目 -->
+
 	<div>
 		<header>
 			<h1 align="left"><a href="index.html"><font color="white" size="6">じぇんとるウィッグ</font></a></h1>
