--- a/jentoluNet/html/about.html
+++ b/jentoluNet/html/about.html
@@ -7,6 +7,9 @@
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link rel="shortcut icon" href="../img/icon.jpg">
 	
+	<title>
+		About
+	</title>
 </head>
 <body>
 <div>
