--- a/jentoluNet/html/gallery.html
+++ b/jentoluNet/html/gallery.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="../css/css.css"/>
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 		<link rel="shortcut icon" href="../img/icon.jpg">
+	
+	<title>
+		Gallery	
+	</title>
 </head>
 <body>
 <div>
