--- a/jentoluNet/html/info.html
+++ b/jentoluNet/html/info.html
@@ -5,6 +5,9 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 		<link rel="shortcut icon" href="../img/icon.jpg">
+	<title>
+		Info
+	</title>
 	<style>
 	body{
 		margin: 0;
