--- a/jentoluNet/html/wigOrder.html
+++ b/jentoluNet/html/wigOrder.html
@@ -5,7 +5,11 @@
 	
 	<link rel="stylesheet" href="../css/css.css"/>
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
-		<link rel="shortcut icon" href="../img/icon.jpg">
+	<link rel="shortcut icon" href="../img/icon.jpg">
+	<title>
+		発注依頼
+	</title>
+
 	<script type="text/javascript">
    function gate() {
       var UserInput = prompt("パスワードを入力して下さい:","");
