オーダーページ修正

--- a/jentoluNet/html/order.html
+++ b/jentoluNet/html/order.html
@@ -87,7 +87,8 @@ function gate(){
 		<br><br>
 		<div align="center">↓</div>
 		<br><br>
-		⑥完成品に問題なければ、発送致します。(着払い)発送後、お問い合わせ送り状番号をお知らせ致します。
+		⑥完成品に問題なければ、発送致します。(ゆうパック着払い)<br>
+		発送後、お問い合わせ送り状番号をお知らせ致します。
 	</h3>
 </div>
 	<br /><br /><br />
