Googleアナリティクス対応

--- a/index.html
+++ b/index.html
@@ -1,188 +1,217 @@
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 
 
-	<link rel="stylesheet" href="jentoluNet/css/css.css"/>
+	<link rel="stylesheet" href="jentoluNet/css/css.css" />
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
-		<link rel="shortcut icon" href="./jentoluNet/img/icon.jpg">
+	<link rel="shortcut icon" href="./jentoluNet/img/icon.jpg">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-N5HC924V2L"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-N5HC924V2L');
+	</script>
 
 	<title>
 		じぇんとるウィッグ
 	</title>
 </head>
+
 <body>
 
 	<div>
 		<header>
-			<h1 align="left"><a href="index.html"><font color="white" size="6">じぇんとるウィッグ</font></a></h1>
-			
-		<div class="menu" align="center">
-			<table>
-				<th>
-					<a href="jentoluNet/html/about.html"><font color="white">about</font></a>
-				</th>
-				<th>
-					<a href="jentoluNet/html/gallery.html"><font color="white">gallery</font></a>
-				</th>
-				<th>
-					<a href="jentoluNet/html/price.html"><font color="white">price</font></a>
-				</th>
-				<th>
-					<a href="jentoluNet/html/order.html"><font color="white">order</font></a>
-				</th>
-			</table>
-		</div>
+			<h1 align="left"><a href="index.html">
+					<font color="white" size="6">じぇんとるウィッグ</font>
+				</a></h1>
+
+			<div class="menu" align="center">
+				<table>
+					<th>
+						<a href="jentoluNet/html/about.html">
+							<font color="white">about</font>
+						</a>
+					</th>
+					<th>
+						<a href="jentoluNet/html/gallery.html">
+							<font color="white">gallery</font>
+						</a>
+					</th>
+					<th>
+						<a href="jentoluNet/html/price.html">
+							<font color="white">price</font>
+						</a>
+					</th>
+					<th>
+						<a href="jentoluNet/html/order.html">
+							<font color="white">order</font>
+						</a>
+					</th>
+				</table>
+			</div>
 		</header>
 	</div>
-	
+
 	<div class="top" align="center">
-		<img src="jentoluNet/img/title.jpg" width="90%"/>
-		
+		<img src="jentoluNet/img/title.jpg" width="90%" />
+
 	</div>
 	<br /><br />
 
 
-<div id="slider">
-<figure>
-<img src="jentoluNet/img/suraido1.jpg" alt="">
-<img src="jentoluNet/img/suraido2.jpg" alt="">
-<img src="jentoluNet/img/suraido3.jpg" alt="">
-<img src="jentoluNet/img/suraido4.jpg" alt="">
+	<div id="slider">
+		<figure>
+			<img src="jentoluNet/img/suraido1.jpg" alt="">
+			<img src="jentoluNet/img/suraido2.jpg" alt="">
+			<img src="jentoluNet/img/suraido3.jpg" alt="">
+			<img src="jentoluNet/img/suraido4.jpg" alt="">
 
-<img src="jentoluNet/img/suraido1.jpg" alt="">
-</figure>
-</div>
+			<img src="jentoluNet/img/suraido1.jpg" alt="">
+		</figure>
+	</div>
 
 
 	<br /><br /><br />
-	
-	
+
+
 	<div style="background-color:#fca4e8">
-		<h1 class="margin" align="left" style="margin-left:20;"><font color="white" size="6" >Price</font></h1>
-	
-	
-		
-	<img src="jentoluNet/img/wig11.png" width="35%" style="margin-left:20;" align="left"/>
-	<h1 align="center" class="vvv">
-		<font color="white">ショート</font>
-	</h1>
-	<h1 align="center" class="bbb">
-		<font color="white"><strong>7700円</strong></font>
-	</h1>
-	<br clear="all">
-	<br />
-	<hr />
-	<br />
-	
-	<img src="jentoluNet/img/wig12.png" width="35%" style="margin-right:20;" align="right"/>
-	<h1 align="center" class="vvv">
-		<font color="white">ミディアム</font>
-	</h1>
-	<h1 align="center" class="bbb">
-		<font color="white"><strong>8800円</strong></font>
-	</h1>
-	<br clear="all">
-	<br />
-	<hr />
-	<br />
-	
-	<img src="jentoluNet/img/wig13.png" width="35%" style="margin-left:20;" align="left"/>
-	<h1 align="center" class="vvv">
-		<font color="white">ロング</font>
-	</h1>
-	<h1 align="center" class="bbb">
-		<font color="white"><strong>11000円</strong></font>
-	</h1>
-	<br clear="all">
-	<br />
-	<hr />
-	<br />
-	
-	<img src="jentoluNet/img/wig14.png" width="35%" style="margin-right:20;" align="right"/>
-	<h1 align="center" class="vvv">
-		<font color="white">スーパーロング</font>
-	</h1>
-	<h1 align="center" class="bbb">
-		<font color="white"><strong>12100円</strong></font>
-	</h1>
-	<br clear="all">
-	<br />
-	<hr />
-	<br />
-	
-	<img src="jentoluNet/img/wig15.png" width="35%" style="margin-left:20;" align="left"/>
-	<br />
-	
-	<h1 align="center" class="vvv">
-		<font color="white">異次元ウィッグ</font>
-	</h1>
-	<h1 align="center" class="bbb">
-		<font color="white"><strong>16500円〜</strong></font>
-	</h1>
-	<br clear="all">
-	<br />
-	<hr />
-	
-	
-		<h1 class="margin" style="margin-left:10;" align="left"><font color="white" size="5">注意</font></h1>
-	<h1 align="center">
-		<font color="white">※表示価格は全て目安です。</font>
-	</h1>
-	
+		<h1 class="margin" align="left" style="margin-left:20;">
+			<font color="white" size="6">Price</font>
+		</h1>
+
+
+
+		<img src="jentoluNet/img/wig11.png" width="35%" style="margin-left:20;" align="left" />
+		<h1 align="center" class="vvv">
+			<font color="white">ショート</font>
+		</h1>
+		<h1 align="center" class="bbb">
+			<font color="white"><strong>7700円</strong></font>
+		</h1>
+		<br clear="all">
+		<br />
+		<hr />
+		<br />
+
+		<img src="jentoluNet/img/wig12.png" width="35%" style="margin-right:20;" align="right" />
+		<h1 align="center" class="vvv">
+			<font color="white">ミディアム</font>
+		</h1>
+		<h1 align="center" class="bbb">
+			<font color="white"><strong>8800円</strong></font>
+		</h1>
+		<br clear="all">
+		<br />
+		<hr />
+		<br />
+
+		<img src="jentoluNet/img/wig13.png" width="35%" style="margin-left:20;" align="left" />
+		<h1 align="center" class="vvv">
+			<font color="white">ロング</font>
+		</h1>
+		<h1 align="center" class="bbb">
+			<font color="white"><strong>11000円</strong></font>
+		</h1>
+		<br clear="all">
+		<br />
+		<hr />
+		<br />
+
+		<img src="jentoluNet/img/wig14.png" width="35%" style="margin-right:20;" align="right" />
+		<h1 align="center" class="vvv">
+			<font color="white">スーパーロング</font>
+		</h1>
+		<h1 align="center" class="bbb">
+			<font color="white"><strong>12100円</strong></font>
+		</h1>
+		<br clear="all">
+		<br />
+		<hr />
+		<br />
+
+		<img src="jentoluNet/img/wig15.png" width="35%" style="margin-left:20;" align="left" />
+		<br />
+
+		<h1 align="center" class="vvv">
+			<font color="white">異次元ウィッグ</font>
+		</h1>
+		<h1 align="center" class="bbb">
+			<font color="white"><strong>16500円〜</strong></font>
+		</h1>
+		<br clear="all">
+		<br />
+		<hr />
+
+
+		<h1 class="margin" style="margin-left:10;" align="left">
+			<font color="white" size="5">注意</font>
+		</h1>
+		<h1 align="center">
+			<font color="white">※表示価格は全て目安です。</font>
+		</h1>
+
 		<div align="center">
 			<form action="jentoluNet/html/price.html">
 				<input type="image" class="hhh" src="jentoluNet/img/kuwasiku.png" width="200">
 			</form>
-			
+
 		</div>
-		
+
 		<br />
 	</div>
 	<div style="background-color:#697EB5;">
 		<br />
-				<div class="menu" align="center">
+		<div class="menu" align="center">
 			<table width="50%">
 				<th>
-					
-			<form action="https://www.instagram.com/_jntolu/">
-				<input type="image" class="ggg" src="jentoluNet/img/insuta.png" width="50">
-			</form>
-			
-	
+
+					<form action="https://www.instagram.com/_jntolu/">
+						<input type="image" class="ggg" src="jentoluNet/img/insuta.png" width="50">
+					</form>
+
+
 				</th>
 				<th>
 					<form action="https://www.youtube.com/channel/UC9fnpVkiy7FipKkepRSdexQ">
-				<input type="image" class="ggg" src="jentoluNet/img/you.png" width="50">
-			</form>
+						<input type="image" class="ggg" src="jentoluNet/img/you.png" width="50">
+					</form>
 				</th>
 				<th>
 					<form action="https://mobile.twitter.com/jntoluwig">
-				<input type="image" class="ggg" src="jentoluNet/img/tuitta.png" width="50">
-			</form>
+						<input type="image" class="ggg" src="jentoluNet/img/tuitta.png" width="50">
+					</form>
 				</th>
 				<th>
 					<form action="https://lin.ee/VGtJ2wu">
-				<input type="image" class="ggg" src="jentoluNet/img/rain.png" width="50">
-			</form>
+						<input type="image" class="ggg" src="jentoluNet/img/rain.png" width="50">
+					</form>
 				</th>
 			</table>
 		</div><br />
-			</div>
-			
+	</div>
 
-	
+
+
 	<footer style="background-color:#4764b5">
 		<br />
-		<div align="center"><a href="jentoluNet/html/info.html"><u><font color="white" size="2.5">特定商取引法に基づく表記</u></font></a></div>
+		<div align="center"><a href="jentoluNet/html/info.html"><u>
+					<font color="white" size="2.5">特定商取引法に基づく表記
+				</u></font></a></div>
 		<br />
 		<p align="center" style="margin:0;">
 			<font color="white" size="2">掲載されているすべてのコンテンツ<br />
-			(記事、画像、等)の無断転載を禁じます。</font><br /><br />
+				(記事、画像、等)の無断転載を禁じます。</font><br /><br />
 			<font color="white">じぇんとる</font>
 		</p>
 	</footer>
 
 </body>
+
 </html>
