--- a/jentoluNet/html/info.html
+++ b/jentoluNet/html/info.html
@@ -1,191 +1,228 @@
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
-	
+
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
-		<link rel="shortcut icon" href="../img/icon.jpg">
+	<link rel="shortcut icon" href="../img/icon.jpg">
 	<title>
 		Info
 	</title>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-N5HC924V2L"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-N5HC924V2L');
+	</script>
+
 	<style>
-	body{
-		margin: 0;
-	}
-header{
-	height: 150px;
-	position: fixed;            /* ヘッダーの固定 */
-    top: 0px;                   /* 位置(上0px) */
-    left: 0px;                  /* 位置(右0px) */
-    width: 100%;                /* 横幅100%　*/
-    height: 140px;              /* 縦幅140px */
-	background-image: url("../img/aaa.jpg");
-	z-index: 99
-}
-body { 
-	font-family: "M PLUS 1p"; 
-}
-.details{
-	margin-top: 142px;
-	text-align: left;
-}
-.details h1{
-	margin-left: 20;
-}
-	 
-th{
-	font-size: 100%;
-	color: white;
-}
+		body {
+			margin: 0;
+		}
 
-table{
-	width: 80%;
-}
-a {
-  text-decoration: none;
-}
-h2{
-	font-size: 20;
-}
-h3{
-	font-size: 15;
-}
+		header {
+			height: 150px;
+			position: fixed;
+			/* ヘッダーの固定 */
+			top: 0px;
+			/* 位置(上0px) */
+			left: 0px;
+			/* 位置(右0px) */
+			width: 100%;
+			/* 横幅100%　*/
+			height: 140px;
+			/* 縦幅140px */
+			background-image: url("../img/aaa.jpg");
+			z-index: 99
+		}
 
-.details{
-	margin-top: 142px;
-	text-align: center;
-}
+		body {
+			font-family: "M PLUS 1p";
+		}
 
+		.details {
+			margin-top: 142px;
+			text-align: left;
+		}
+
+		.details h1 {
+			margin-left: 20;
+		}
+
+		th {
+			font-size: 100%;
+			color: white;
+		}
+
+		table {
+			width: 80%;
+		}
+
+		a {
+			text-decoration: none;
+		}
+
+		h2 {
+			font-size: 20;
+		}
+
+		h3 {
+			font-size: 15;
+		}
+
+		.details {
+			margin-top: 142px;
+			text-align: center;
+		}
 	</style>
 </head>
+
 <body>
-<div>
+	<div>
 		<header>
-			<h1 align="left"><a href="../../index.html"><font color="white">じぇんとるウィッグ</font></a></h1>
-			
-		<div class="menu" align="center">
-			<table>
-				<th>
-					<a href="./about.html"><font color="white">about</font></a>
-				</th>
-				<th>
-					<a href="./gallery.html"><font color="white">gallery</font></a>
-				</th>
-				<th>
-					<a href="./price.html"><font color="white">price</font></a>
-				</th>
-				<th>
-					<a href="./order.html"><font color="white">order</font></a>
-				</th>
-			</table>
-		</div>
+			<h1 align="left"><a href="../../index.html">
+					<font color="white">じぇんとるウィッグ</font>
+				</a></h1>
+
+			<div class="menu" align="center">
+				<table>
+					<th>
+						<a href="./about.html">
+							<font color="white">about</font>
+						</a>
+					</th>
+					<th>
+						<a href="./gallery.html">
+							<font color="white">gallery</font>
+						</a>
+					</th>
+					<th>
+						<a href="./price.html">
+							<font color="white">price</font>
+						</a>
+					</th>
+					<th>
+						<a href="./order.html">
+							<font color="white">order</font>
+						</a>
+					</th>
+				</table>
+			</div>
 		</header>
 	</div>
 	<br />
 	<div class="details">
-		<h1><font size="4" >特定商取引法に基づく表記</font></h1>
+		<h1>
+			<font size="4">特定商取引法に基づく表記</font>
+		</h1>
 	</div>
-	
+
 	<div class="popo">
-	<h2>
-		【販売業者】
-	</h2>
-	<h3>
-		じぇんとる
-	</h3> <br /> <br />
-	<h2>
-		【運営統括責任者名】
-	</h2>
-	<h3>
-		じぇん
-	</h3> <br /> <br />
-	<h2>
-		【所在地】
-	</h2>
-	<h3>
-		省略した記載については、電子メールに等の請求により遅滞なく開示致します。
-	</h3> <br /> <br />
-	<h2>
-		【商品代金以外の必要料金の説明】
-	</h2>
-	<h3>
-		送料、振り込み手数料
-	</h3> <br /> <br />
-	<h2>
-		【販売価格】
-	</h2>
-	<h3>
-		料金表を参考に、詳しい料金表はお見積もりにてお出ししております。<br />税込価格でご提示させて頂きます。
-	</h3> <br /> <br />
-	<h2>
-		【引渡し時期】
-	</h2>
-	<h3>
-		支払い確認後、制作に入り１ヶ月以内、納期をご相談頂けましたら納期までに発送致します。
-	</h3> <br /> <br />
-	<h2>
-		【発送について】
-	</h2>
-	<h3>
-		ゆうパック　着払い
-	</h3> <br /> <br />
-	<h2>
-		【お支払方法】
-	</h2>
-	<h3>
-		銀行振込
-	</h3> <br /> <br />
-	<h2>
-		【お支払期限】
-	</h2>
-	<h3>
-		お見積もり後、翌日から７日間以内にお支払ください。難しい場合はご相談下さい。
-	</h3> <br /> <br />
-	<h2>
-		【返品等についての特約に関する事項】
-	</h2>
-	<h3>
-		発送前に完成画像をお送り致しますので、その際に何かあればご連絡お願い致します。<br />
-		輸送中のセットの崩れに関しては一切責任を負えません。<br />
-		手元に届いてからの手直しの送料はお客様側負担です。
-	</h3> <br /> <br />
-	<h2>
-		【返品送料】
-	</h2>
-	<h3>
-		購入者様負担
-	</h3> <br /> <br />
-	<h2>
-		【商標・著作権について】
-	</h2>
-	<h3>
-		オーダーメイドによる商標著作権の商品は権利者様の承諾を得てご依頼ください。<br />
-		著作権に関わるトラブルなどは一切の責任を持ちませんのでご了承下さい。
-	</h3> <br /> <br />
-	<h2>
-		【資格・免許】
-	</h2>
-	<h3>
-		独学での制作になります。
-	</h3> <br /> <br />
-	<h2>
-		【連絡先メールアドレス】
-	</h2>
-	<h3>
-		pipopa.138@gmail.com
-	</h3> <br /> <br />
+		<h2>
+			【販売業者】
+		</h2>
+		<h3>
+			じぇんとる
+		</h3> <br /> <br />
+		<h2>
+			【運営統括責任者名】
+		</h2>
+		<h3>
+			じぇん
+		</h3> <br /> <br />
+		<h2>
+			【所在地】
+		</h2>
+		<h3>
+			省略した記載については、電子メールに等の請求により遅滞なく開示致します。
+		</h3> <br /> <br />
+		<h2>
+			【商品代金以外の必要料金の説明】
+		</h2>
+		<h3>
+			送料、振り込み手数料
+		</h3> <br /> <br />
+		<h2>
+			【販売価格】
+		</h2>
+		<h3>
+			料金表を参考に、詳しい料金表はお見積もりにてお出ししております。<br />税込価格でご提示させて頂きます。
+		</h3> <br /> <br />
+		<h2>
+			【引渡し時期】
+		</h2>
+		<h3>
+			支払い確認後、制作に入り１ヶ月以内、納期をご相談頂けましたら納期までに発送致します。
+		</h3> <br /> <br />
+		<h2>
+			【発送について】
+		</h2>
+		<h3>
+			ゆうパック　着払い
+		</h3> <br /> <br />
+		<h2>
+			【お支払方法】
+		</h2>
+		<h3>
+			銀行振込
+		</h3> <br /> <br />
+		<h2>
+			【お支払期限】
+		</h2>
+		<h3>
+			お見積もり後、翌日から７日間以内にお支払ください。難しい場合はご相談下さい。
+		</h3> <br /> <br />
+		<h2>
+			【返品等についての特約に関する事項】
+		</h2>
+		<h3>
+			発送前に完成画像をお送り致しますので、その際に何かあればご連絡お願い致します。<br />
+			輸送中のセットの崩れに関しては一切責任を負えません。<br />
+			手元に届いてからの手直しの送料はお客様側負担です。
+		</h3> <br /> <br />
+		<h2>
+			【返品送料】
+		</h2>
+		<h3>
+			購入者様負担
+		</h3> <br /> <br />
+		<h2>
+			【商標・著作権について】
+		</h2>
+		<h3>
+			オーダーメイドによる商標著作権の商品は権利者様の承諾を得てご依頼ください。<br />
+			著作権に関わるトラブルなどは一切の責任を持ちませんのでご了承下さい。
+		</h3> <br /> <br />
+		<h2>
+			【資格・免許】
+		</h2>
+		<h3>
+			独学での制作になります。
+		</h3> <br /> <br />
+		<h2>
+			【連絡先メールアドレス】
+		</h2>
+		<h3>
+			pipopa.138@gmail.com
+		</h3> <br /> <br />
 	</div>
-	
-	<footer style="background-color:#4764b5; margin:0;" >
-	
+
+	<footer style="background-color:#4764b5; margin:0;">
+
 		<br />
 		<p align="center" style="margin:0;">
 			<font color="white" size="2">掲載されているすべてのコンテンツ<br />
-			(記事、画像、等)の無断転載を禁じます。</font><br /><br />
+				(記事、画像、等)の無断転載を禁じます。</font><br /><br />
 			<font color="white">じぇんとる</font>
 		</p>
 		<br />
 	</footer>
 
 </body>
+
 </html>
