--- a/jentoluNet/html/wigOrder.html
+++ b/jentoluNet/html/wigOrder.html
@@ -1,78 +1,108 @@
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
-	
-	<link rel="stylesheet" href="../css/css.css"/>
+
+	<link rel="stylesheet" href="../css/css.css" />
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link rel="shortcut icon" href="../img/icon.jpg">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-N5HC924V2L"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-N5HC924V2L');
+	</script>
+
 	<title>
 		発注依頼
 	</title>
 
 	<script type="text/javascript">
-   function gate() {
-      var UserInput = prompt("パスワードを入力して下さい:","");
-      location.href = UserInput + ".html";
-   }
-   </script>
+		function gate() {
+			var UserInput = prompt("パスワードを入力して下さい:", "");
+			location.href = UserInput + ".html";
+		}
+	</script>
 </head>
+
 <body>
-<div>
+	<div>
 		<header>
-			<h1 align="left"><a href="../../index.html"><font color="white">じぇんとるウィッグ</font></a></h1>
-			
-		<div class="menu" align="center">
-			<table>
-				<th>
-					<a href="./about.html"><font color="white">about</font></a>
-				</th>
-				<th>
-					<a href="./gallery.html"><font color="white">gallery</font></a>
-				</th>
-				<th>
-					<a href="./price.html"><font color="white">price</font></a>
-				</th>
-				<th>
-					<a href="./order.html"><font color="white">order</font></a>
-				</th>
-			</table>
-		</div>
+			<h1 align="left"><a href="../../index.html">
+					<font color="white">じぇんとるウィッグ</font>
+				</a></h1>
+
+			<div class="menu" align="center">
+				<table>
+					<th>
+						<a href="./about.html">
+							<font color="white">about</font>
+						</a>
+					</th>
+					<th>
+						<a href="./gallery.html">
+							<font color="white">gallery</font>
+						</a>
+					</th>
+					<th>
+						<a href="./price.html">
+							<font color="white">price</font>
+						</a>
+					</th>
+					<th>
+						<a href="./order.html">
+							<font color="white">order</font>
+						</a>
+					</th>
+				</table>
+			</div>
 		</header>
 	</div>
-	
-		
-		<div class="details">
-		<h1><font size="10" color="white">発注依頼</font></h1>
- 
-		
-	</dir>
-	
-	
-	<div class="aaaiii">
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfVG3rZiy-xhQ2vUuom3M6OTQVq4XcVJuCGYRQIstMKp2LaJg/viewform?embedded=true" width="300" height="1280" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
-		
-	</div>
-	
-	
-	
-	
-	
-	
-	<br /><br /><br /><br /><br /><br /><br />
-	
-	
-	
-	<footer style="background-color:#4764b5">
-		<br />
-		<div align="center"><a href="info.html"><u><font color="white" size="2.5">特定商取引法に基づく表記</u></font></a></div>
-		<br />
-		<p align="center" style="margin:0;">
-			<font color="white" size="2">掲載されているすべてのコンテンツ<br />
-			(記事、画像、等)の無断転載を禁じます。</font><br /><br />
-			<font color="white">じぇんとる</font>
-		</p>
-	</footer>
-	
+
+
+	<div class="details">
+		<h1>
+			<font size="10" color="white">発注依頼</font>
+		</h1>
+
+
+		</dir>
+
+
+		<div class="aaaiii">
+			<iframe
+				src="https://docs.google.com/forms/d/e/1FAIpQLSfVG3rZiy-xhQ2vUuom3M6OTQVq4XcVJuCGYRQIstMKp2LaJg/viewform?embedded=true"
+				width="300" height="1280" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+
+		</div>
+
+
+
+
+
+
+		<br /><br /><br /><br /><br /><br /><br />
+
+
+
+		<footer style="background-color:#4764b5">
+			<br />
+			<div align="center"><a href="info.html"><u>
+						<font color="white" size="2.5">特定商取引法に基づく表記
+					</u></font></a></div>
+			<br />
+			<p align="center" style="margin:0;">
+				<font color="white" size="2">掲載されているすべてのコンテンツ<br />
+					(記事、画像、等)の無断転載を禁じます。</font><br /><br />
+				<font color="white">じぇんとる</font>
+			</p>
+		</footer>
+
 </body>
+
 </html>
