--- a/jentoluNet/html/price.html
+++ b/jentoluNet/html/price.html
@@ -1,50 +1,75 @@
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
-	
-	<link rel="stylesheet" href="../css/css.css"/>
+
+	<link rel="stylesheet" href="../css/css.css" />
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
-		<link rel="shortcut icon" href="../img/icon.jpg">
+	<link rel="shortcut icon" href="../img/icon.jpg">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-N5HC924V2L"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-N5HC924V2L');
+	</script>
+
 	<title>
 		Price
 	</title>
 </head>
+
 <body>
-<div>
+	<div>
 		<header>
-			<h1 align="left"><a href="../../index.html"><font color="white">じぇんとるウィッグ</font></a></h1>
-			
-		<div class="menu" align="center">
-			<table>
-				<th>
-					<a href="./about.html"><font color="white">about</font></a>
-				</th>
-				<th>
-					<a href="./gallery.html"><font color="white">gallery</font></a>
-				</th>
-				<th>
-					<a href="./price.html"><font color="white">price</font></a>
-				</th>
-				<th>
-					<a href="./order.html"><font color="white">order</font></a>
-				</th>
-			</table>
-		</div>
+			<h1 align="left"><a href="../../index.html">
+					<font color="white">じぇんとるウィッグ</font>
+				</a></h1>
+
+			<div class="menu" align="center">
+				<table>
+					<th>
+						<a href="./about.html">
+							<font color="white">about</font>
+						</a>
+					</th>
+					<th>
+						<a href="./gallery.html">
+							<font color="white">gallery</font>
+						</a>
+					</th>
+					<th>
+						<a href="./price.html">
+							<font color="white">price</font>
+						</a>
+					</th>
+					<th>
+						<a href="./order.html">
+							<font color="white">order</font>
+						</a>
+					</th>
+				</table>
+			</div>
 		</header>
 	</div>
 	<div class="details">
-		<h1><font size="10" color="white">price</font></h1>
+		<h1>
+			<font size="10" color="white">price</font>
+		</h1>
 	</div>
-	
-	
+
+
 	<div style="margin:20;" class="order-font">
 		<h2>
 			【使用するウィッグについて】
 		</h2>
 		<h3>
-		お見積もりの時点でイメージ画像を送って頂き、お近い色のウィッグを購入し製作致します。<br />
-		(ウィッグのメーカー指定の場合、料金変動あり)<br />	
+			お見積もりの時点でイメージ画像を送って頂き、お近い色のウィッグを購入し製作致します。<br />
+			(ウィッグのメーカー指定の場合、料金変動あり)<br />
 		</h3>
 		<br /><br /><br />
 		<h2>
@@ -73,21 +98,24 @@
 			<br /><br />
 			ウィッグを染める、グラデーションなど毛束を使用する場合、追加料金あり
 		</h3>
-		</div>
+	</div>
 	<br /><br /><br /><br /><br /><br />
-	
-	
-	
-	<footer style="background-color:#4764b5; margin:0;" >
+
+
+
+	<footer style="background-color:#4764b5; margin:0;">
 		<br />
-		<div align="center"><a href="info.html"><u><font color="white" size="2.5">特定商取引法に基づく表記</u></font></a></div>
+		<div align="center"><a href="info.html"><u>
+					<font color="white" size="2.5">特定商取引法に基づく表記
+				</u></font></a></div>
 		<br />
 		<p align="center" style="margin:0;">
 			<font color="white" size="2">掲載されているすべてのコンテンツ<br />
-			(記事、画像、等)の無断転載を禁じます。</font><br /><br />
+				(記事、画像、等)の無断転載を禁じます。</font><br /><br />
 			<font color="white">じぇんとる</font>
 		</p>
 	</footer>
 
 </body>
+
 </html>
