--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link rel="shortcut icon" href="./jentoluNet/img/icon.jpg">
 
+	<script data-ad-client="ca-pub-8115040989673854" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-N5HC924V2L"></script>
 	<script>
