--- a/jentoluNet/html/info.html
+++ b/jentoluNet/html/info.html
@@ -10,6 +10,8 @@
 		Info
 	</title>
 
+	<script data-ad-client="ca-pub-8115040989673854" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-N5HC924V2L"></script>
 	<script>
