--- a/jentoluNet/html/order.html
+++ b/jentoluNet/html/order.html
@@ -8,6 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link rel="shortcut icon" href="../img/icon.jpg">
 
+	<script data-ad-client="ca-pub-8115040989673854" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 	<title>
 		Order
 	</title>
