--- a/jentoluNet/html/order.html
+++ b/jentoluNet/html/order.html
@@ -8,7 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
 	<link rel="shortcut icon" href="../img/icon.jpg">
 
-	<script data-ad-client="ca-pub-8115040989673854" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script data-ad-client="ca-pub-8115040989673854" async
+		src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 	<title>
 		Order
@@ -88,7 +89,7 @@
 		</h1>
 		<br><br><br>
 		<h3>
-			【ご注文の流れ】<br>
+			【ご注文の流れ・注意】<br>
 			①まずは見積もりのご相談を「じぇんとるウィッグ公式LINE」にて問い合わせ下さい。<br>
 			制作の可否とお見積もりを税込価格でご提示させて頂きます。<br><br>
 
@@ -117,11 +118,33 @@
 			発送後、お問い合わせ送り状番号をお知らせ致します。
 		</h3>
 	</div>
+	<dialog style="height: 150;">
+		<p style="text-align: center;">【ご注文の流れ・注意】、【特定商取引法に基づく表記】<br>
+		を確認しましたか。</p><br>
+		<div style="text-align: center;">
+			<form action="https://lin.ee/VGtJ2wu">
+				<input type="submit" value="はい">
+			</form>
+			<form action="order.html">
+				<input type="submit" value="いいえ">
+			</form>
+			
+		</div>
+		
+	</dialog>
 	<br /><br /><br />
 	<div style="text-align:center;">
 		<div class="container">
-			<a href="https://lin.ee/VGtJ2wu" class="btn-push">まずはお見積もりから！</a>
+			<a id="show" class="btn-push">まずはお見積もりから！</a>
 		</div>
+		
+		<script>
+			var dialog = document.querySelector('dialog');
+			var btn_show = document.getElementById('show');
+			btn_show.addEventListener('click', function () {
+				dialog.show();
+			}, false);
+		</script>
 	</div>
 
 	<br /><br /> <br /><br />
