--- a/jentoluNet/html/order.html
+++ b/jentoluNet/html/order.html
@@ -89,7 +89,7 @@
 		</h1>
 		<br><br><br>
 		<h3>
-			【ご注文の流れ・注意】<br>
+			<b style="font-size: large;">【ご注文の流れ・注意】</b><br><br>
 			①まずは見積もりのご相談を「じぇんとるウィッグ公式LINE」にて問い合わせ下さい。<br>
 			制作の可否とお見積もりを税込価格でご提示させて頂きます。<br><br>
 
