--- a/jentoluNet/html/order.html
+++ b/jentoluNet/html/order.html
@@ -118,33 +118,11 @@
 			発送後、お問い合わせ送り状番号をお知らせ致します。
 		</h3>
 	</div>
-	<dialog style="height: 150;">
-		<p style="text-align: center;">【ご注文の流れ・注意】、【特定商取引法に基づく表記】<br>
-		を確認しましたか。</p><br>
-		<div style="text-align: center;">
-			<form action="https://lin.ee/VGtJ2wu">
-				<input type="submit" value="はい">
-			</form>
-			<form action="order.html">
-				<input type="submit" value="いいえ">
-			</form>
-			
-		</div>
-		
-	</dialog>
+	
 	<br /><br /><br />
 	<div style="text-align:center;">
-		<div class="container">
-			<a id="show" class="btn-push">まずはお見積もりから！</a>
-		</div>
 		
-		<script>
-			var dialog = document.querySelector('dialog');
-			var btn_show = document.getElementById('show');
-			btn_show.addEventListener('click', function () {
-				dialog.show();
-			}, false);
-		</script>
+		<a href="https://lin.ee/VGtJ2wu"><img height="60" border="0" alt="友だち追加" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"></a>
 	</div>
 
 	<br /><br /> <br /><br />
