--- a/jentoluNet/html/order.html
+++ b/jentoluNet/html/order.html
@@ -117,6 +117,11 @@
 			⑥完成品に問題なければ、発送致します。(ゆうパック着払い)<br>
 			発送後、お問い合わせ送り状番号をお知らせ致します。
 		</h3>
+		<br>
+		<br>
+		<h3>
+			お急ぎ依頼：１週間以内などお急ぎの依頼相談承ります。(+2000円～)
+		</h3>
 	</div>
 	
 	<br /><br /><br />
@@ -137,7 +142,7 @@
 		</h3>
 	</div>
 	<br /><br /><br /><br />
-
+	
 
 
 	<footer style="background-color:#4764b5">
