--- a/jentoluNet/html/price.html
+++ b/jentoluNet/html/price.html
@@ -100,6 +100,11 @@
 			<br /><br />
 			ウィッグを染める、グラデーションなど毛束を使用する場合、追加料金あり
 		</h3>
+		<br>
+		<br>
+		<h3>
+			お急ぎ依頼：１週間以内などお急ぎの依頼相談承ります。(+2000円～)
+		</h3>
 	</div>
 	<br /><br /><br /><br /><br /><br />
 
